# PlatformEscape

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  ninja_setup.sh  setup.sh  unix_setup.sh
aseprite/: grassland_tileset.aseprite
include/: PlatformEscape.h  Player.h  behaviors.h  gameobject.h  level.h  logging.h  objectloader.h  utils.h
res/: tilesets.txt
src/: PlatformEscape.cpp  Player.cpp  behaviors.cpp  gameobject.cpp  level.cpp  logging.cpp  main.cpp  objectloader.cpp  utils.cpp
